use flex box to vertially align the elements in the text viz to avoid css hacks around blurry text

--- a/style/mixins.less
+++ b/style/mixins.less
@@ -19,3 +19,9 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+.flex-children-vertical-middle(){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
